@@ -94,6 +94,7 @@ BA 34- prototype codes U and u for ulong
    36- GP functions msinit, ellpadicL
 BA 37- [mingw] support for the alarm GP function
 BA 38- [libpari] functions Fl_sqrtl, Fl_sqrtl_pre
+   39- [libpari] function ZV_allpnqn
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
